# GAM200_JSLC_Project-P

./: .gitignore  CMakeLists.txt  GAM200_JSLC.sln  README.md  README_ENG.md  README_KR.md
GAM200_JSLC/: .clangd  CMakeLists.txt  CMakePresets.json  GAM200_JSLC.vcxproj  GAM200_JSLC.vcxproj.filters  GameLog.txt  GameObjectTypes.hpp  JSLC_Milestone3_loc.csv  JSLC_Milestone4_loc.csv  JSLC_milestone2_loc.csv  MAP_OBJECT_HITBOX_COORDINATES.md  drone_config.json  imgui.ini  main.cpp  minyoung.cho_milestone1_loc.csv  minyoung.cho_milestone2_loc.csv  shell.html
GAM200_JSLC/Asset/config/: map_objects.json
GAM200_JSLC/CS200/: RGBA.hpp  RenderingAPI.cpp  RenderingAPI.hpp
GAM200_JSLC/Config/: control_bindings.json  imgui.ini  live_drone_states.json  map_objects.json
GAM200_JSLC/Engine/: Camera.cpp  Camera.hpp  Collision.cpp  Collision.hpp  ControlBindings.cpp  ControlBindings.hpp  DebugRenderer.cpp  DebugRenderer.hpp  DroneConfig.cpp  DroneConfig.hpp  Engine.cpp  Engine.h  Engine.hpp  GameState.hpp  GameStateManager.cpp  GameStateManager.hpp  ImguiManager.cpp  ImguiManager.hpp  Input.cpp  Input.hpp  Logger.cpp  Logger.hpp  Matrix.cpp  Matrix.h  Matrix.hpp  Rect.hpp  RobotConfig.cpp  RobotConfig.hpp  Sound.cpp  Sound.hpp  Vec2.cpp  Vec2.h  Vec2.hpp  Window.cpp  Window.hpp
GAM200_JSLC/Game/: Background.cpp  Background.hpp  CreditsState.cpp  CreditsState.hpp  Door.cpp  Door.hpp  Drone.cpp  Drone.hpp  DroneManager.cpp  DroneManager.hpp  Font.cpp  Font.hpp  GameOver.cpp  GameOver.hpp  GameplayState.cpp  GameplayState.hpp  Hallway.cpp  Hallway.hpp  MainMenu.cpp  MainMenu.hpp  MapObjectConfig.cpp  MapObjectConfig.hpp  MapObjectTypes.hpp  MiniMap.cpp  MiniMap.hpp  Player.cpp  Player.h  Player.hpp  PulseCore.hpp  PulseGauge.cpp  PulseGauge.hpp  PulseManager.cpp  PulseManager.hpp  PulseSource.cpp  PulseSource.hpp  PurseCore.hpp  PurseManager.cpp  PurseSource.cpp  Robot.cpp  Robot.hpp  (+22 more)
GAM200_JSLC/OpenGL/: GLWrapper.hpp  MacFramebufferSize.h  MacFramebufferSize.mm  PostProcessManager.cpp  PostProcessManager.h  QuadMesh.cpp  QuadMesh.hpp  Shader.cpp  Shader.h  Shader.hpp
GAM200_JSLC/OpenGL/Shaders/: outline.frag  outline.vert  post.frag  post.vert  silhouette.frag  simple.frag  simple.vert  solid_color.frag  solid_color.vert  splash.frag  splash.vert
GAM200_JSLC/Win32/: RefreshAppIcon.ps1  app.rc
GAM200_JSLC/_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  GAM200JSLC.sln  GAM200JSLC.vcxproj  GAM200JSLC.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
GAM200_JSLC/docs/: macOS_Port_Presentation_Code_Highlighted.html
GAM200_JSLC/include/: stb_image.h
GAM200_JSLC/x64/Debug/: GAM200_JSLC.exe.recipe  GAM200_JSLC.ilk  GAM200_JSLC.vcxproj.FileListAbsolute.txt  vc143.idb
GAM200_JSLC/x64/Debug/GAM200_JSLC.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  GAM200_JSLC.lastbuildstate  GAM200_JSLC.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
docs/: index.html  macOS_Port_Presentation_Code_References.md
